# bjudger

./: .gitignore  .gitmodules  APIDOC.md  CMakeLists.txt  LICENSE  README.md
etc/: config.json  exist_req.json  exist_resp.json  judge_req.json  judge_resp.json5
example/problemA/: content.md
src/: main.cpp
src/include/: compiler.h  context.h  judger.h  problem.h  runner.h  simple_c_compiler.h  simple_compiler.h  simple_cpp_runner.h
src/include/lang/: complex_compiler.h
src/include/lang/cpp/: cpp_judger.h  simple_cpp_compiler.h  simple_cpp_runner.h  special_cpp_judger.h
src/lib/: complex_compiler.cpp  problem.cpp  simple_c_compiler.cpp
src/lib/plugins/apis/exist/: exist.cpp
src/lib/plugins/apis/judge/: judge.cpp
src/lib/plugins/cpp/: cpp_judger.cpp  simple_cpp_compiler.cpp
src/lib/plugins/judgers/cpp/: cpp_judger.cpp  simple_cpp_compiler.cpp  simple_cpp_runner.cpp
src/lib/plugins/judgers/special_cpp/: special_cpp_judger.cpp
src/main/: global_vars.cpp  globals.cpp  init.cpp  main.cpp  web_handler.cpp
src/tools/: calculate_problem_id.cpp
